Revert "bugfix - spacing"
This reverts commit 200c2f6cf569538114b64d685102faeb1ec3bc2a.

--- a/src/app/components/App.css
+++ b/src/app/components/App.css
@@ -145,7 +145,7 @@
     display: flex;
     flex-flow: column wrap;
     min-width: 900px;
-    height: 400px;
+    max-height: 440px;
   }
 
   .barShiftsEmp {
